added multiple changes

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,5 @@
-<div class="container">
-    {{partial 'header'}}
-    {{partial 'navbar'}}
+{{partial 'header'}}
+<main>
     {{outlet}}
-    {{partial 'footer'}}
-</div>
+</main>
+{{partial 'footer'}}
