--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -1,1 +1,18 @@
-{{outlet}}
+{{#if registered}}
+    <h1>Registered!</h1>
+    <p>Registration was successful.  You can {{link-to 'now login' 'login'}} with the credentials you registered with.</p>
+{{else}}
+<h1>Register</h1>
+{{#if errorMessage}}
+    <div class="alert alert-danger">
+        {{errorMessage}}
+    </div>
+{{/if}}
+    <form class="{{if isProcessing 'is--processing'}}" {{action "register" on="submit"}}>
+        {{form-field id="firstname" type="text" label="First Name" value=firstname}}
+        {{form-field id="lastname" type="text" label="Last Name" value=lastname}}
+        {{form-field id="identification" type="email" label="Email" value=model.email}}
+        {{form-field type="password" label="Password" value=model.password}}
+        {{input type="submit" value="Submit"}}
+    </form>
+{{/if}}
