--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,3 +13,6 @@
 @import "form/label";
 @import "form/input";
 @import "form/submit";
+@import "form/fieldset";
+@import "form/textarea";
+@import "component/form-increment";
