--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -9,10 +9,10 @@
     </div>
 {{/if}}
     <form class="{{if isProcessing 'is--processing'}}" {{action "register" on="submit"}}>
-        {{form-field id="firstname" type="text" label="First Name" value=firstname}}
-        {{form-field id="lastname" type="text" label="Last Name" value=lastname}}
-        {{form-field id="identification" type="email" label="Email" value=model.email}}
-        {{form-field type="password" label="Password" value=model.password}}
+        {{form-input id="firstname" type="text" label="First Name" value=firstname}}
+        {{form-input id="lastname" type="text" label="Last Name" value=lastname}}
+        {{form-input id="identification" type="email" label="Email" value=model.email}}
+        {{form-input type="password" label="Password" value=model.password}}
         {{input type="submit" value="Submit"}}
     </form>
 {{/if}}
