added animated icons

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,9 +1,11 @@
 @import "bower_components/bootstrap/scss/bootstrap";
 @import "bower_components/include-media/dist/include-media";
+@import "bower_components/font-awesome/scss/font-awesome";
 @import "vendor/animate";
 @import "utils/variables";
 @import "utils/mixins";
 @import "theme/theme";
+@import "base/icon";
 @import "base/typography";
 @import "base/list";
 @import "base/button";
