--- a/app/styles/form/_fieldset.scss
+++ b/app/styles/form/_fieldset.scss
@@ -3,8 +3,6 @@ fieldset {
 }
 
 fieldset .counter {
-    position: absolute;
-    bottom: 5px;
-    right: 10px;
+    float: right;
     color: $orange;
 }
