--- a/app/templates/components/form-increment.hbs
+++ b/app/templates/components/form-increment.hbs
@@ -1,3 +1,6 @@
-<button class='form-increment-minus' {{action "decrement"}}>-</button>
-{{input type=text id=id class='form-increment-quantity' value=value keyup="update"}}
-<button class='form-increment-plus' {{action "decrement"}}>+</button>
+<div class="form-increment-control">
+    <button class='form-increment-minus' {{action "decrement"}}>-</button>
+  {{input type=text id=id class='form-increment-quantity' value=value keyup="update"}}
+    <button class='form-increment-plus' {{action "increment"}}>+</button>
+</div>
+{{yield}}
