--- a/app/styles/theme/_theme.scss
+++ b/app/styles/theme/_theme.scss
@@ -3,31 +3,24 @@
  */
 
 @lost flexbox flex;
-* {
-    outline: 0 !important;
-    &:focus,
-    &:active {
-        outline: 0 !important;
-    }
-}
-
 
 /**
  * base
  */
 
 html {
-    font-size: responsive 13px 16px;
-    font-range: 420px 1280px;
+  font-size: responsive 13px 16px;
+  font-range: 420px 1280px;
 }
 
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background-color: lighten($orangeLight, 50);
-    color: $greyMedium;
-    font-family: $kanit;
+  background-color: lighten($orangeLight, 50);
+  color: $greyMedium;
+  font-family: $kanit;
+  line-height: 1;
 }
