--- a/app/templates/components/form-input.hbs
+++ b/app/templates/components/form-input.hbs
@@ -1,7 +1,12 @@
 {{#if label}}
     <label {{bind-attr for=label}}>{{label}}</label>
 {{/if}}
-{{input type=type value=value id=label placeholder=label maxlength=maxlength keyup="update" }}
+{{#unless (if_eq type 'textarea')}}
+    {{input type=type value=value id=label placeholder=label maxlength=maxlength keyup="update" }}
+{{else}}
+    {{textarea value=value id=label placeholder=placeholder maxlength=maxlength keyup="update"}}
+{{/unless}}
 {{#if maxlength}}
-	<span class="counter">characters remaining: {{charatersRemaining}}</span>
+	<span class="counter">characters remaining: {{charactersRemaining}}</span>
 {{/if}}
+{{yield}}
