--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -2,6 +2,7 @@
 @import "bower_components/include-media/dist/include-media";
 @import "bower_components/font-awesome/scss/font-awesome";
 @import "vendor/animate";
+@import "vendor/clndr";
 @import "utils/variables";
 @import "utils/mixins";
 @import "theme/theme";
