--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,5 +1,7 @@
-{{partial 'header'}}
-<main>
-    {{outlet}}
-</main>
-{{partial 'footer'}}
+<div class="">
+    {{partial 'header'}}
+    <main>
+        {{outlet}}
+    </main>
+</div>
+    {{partial 'footer'}}
