--- a/client/app/styles/layout/_nav.scss
+++ b/client/app/styles/layout/_nav.scss
@@ -1,18 +1,46 @@
 .navbar-brand {
-    font-family: $ultra;
+    @include font-smoothing();
+
+    flex: 1 0 0;
+    padding: 0 0.5em;
     color: $yellow;
     font-size: 2.5em;
-    @include font-smoothing();
+    font-family: $ultra;
 }
 
-nav {}
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-nav ul {}
+nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
 nav li {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
+    flex: 0 1 auto;
+}
+
+nav li a {
+    display: flex;
+    align-items: flex-start;
+    padding: 1.25rem 1.5rem;
+    color: #333;
+    color: $yellow;
+    font-weight: bold;
+    cursor: pointer;
+
+    &.active,
+    &:hover {
+        background-color: lighten($orange, 10);
+        color: white;
+    }
 }
 
 nav li div.icon {
